modifico los package.json, authenticate.js y usuarios.js

--- a/package.json
+++ b/package.json
@@ -27,8 +27,5 @@
   "bugs": {
     "url": "https://github.com/Piercing/nodepop/issues"
   },
-  "homepage": "https://github.com/Piercing/nodepop#readme",
-  "dependencies": {
-    "async": "^1.4.2"
-  }
+  "homepage": "https://github.com/Piercing/nodepop#readme"
 }
